<resources>
    <string name="app_name">Task</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_here">Not having account? Register here</string>
    <string name="dashboard">Dashboard</string>
    <string name="username">Username</string>
    <string name="register_here_ac">Register Here</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="done">Done</string>
    <string name="login_here">Login Here</string>
    <string name="location">Location</string>
</resources>