<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/twenty_dp">

    <ProgressBar
        android:id="@+id/progress_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_here"
        android:textSize="@dimen/thirty_sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/mail_id_et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_txt_clr"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/eighteen_sp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/ten_dp"
        android:layout_marginTop="@dimen/twenty_dp"/>

    <EditText
        android:id="@+id/password_et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondary_txt_clr"
        android:inputType="textPassword"
        android:textSize="@dimen/eighteen_sp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/ten_dp"
        android:layout_marginTop="@dimen/twenty_dp"/>

    <TextView
        android:id="@+id/register_txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textSize="@dimen/fourteen_sp"
        android:textColor="@color/secondary_txt_clr"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/five_dp"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/fifty_dp"/>

</LinearLayout>